force-app/main/default/objects/Continuous_Integration__c/Continuous_Integration__c.object-meta.xml
<CustomObject>
    <label>Continuous Integration</label>
    <nameField>
        <label>Continuous Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Continuous Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>