force-app/main/default/objects/Continuous_Integration__c/fields/FieldOne__c.field-meta.xml
<CustomField>
    <fullName>FieldOne__c</fullName>
    <label>Field One Bar</label>
    <length>80</length>
    <type>Text</type>
</CustomField>