force-app/main/default/objects/Continuous_Integration__c/fields/FieldThree__c.field-meta.xml
<CustomField>
    <fullName>FieldThree__c</fullName>
    <label>Field Three</label>
    <length>80</length>
    <type>Text</type>
</CustomField>