force-app/main/default/objects/Continuous_Integration__c/fields/FieldTwo__c.field-meta.xml
<CustomField>
    <fullName>FieldTwo__c</fullName>
    <label>Field Two</label>
    <length>80</length>
    <type>Text</type>
</CustomField>