force-app/main/default/objects/Continuous_Integration__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test Hello Ruben</label>
    <length>80</length>
    <type>Text</type>
</CustomField>